--- a/.env-sample
+++ b/.env-sample
@@ -1,2 +1,2 @@
-CONNECTION_STRING="user=user dbname=dbname sslmode=disable"
+DATABASE_URL="user=user dbname=dbname sslmode=disable"
 ENVIRONMENT="development"
